@@ -125,6 +125,8 @@ protected:
 	void			OnDoHScroll(UINT nSBCode, UINT nPos, CScrollBar* pScrollBar, CBaseView * master);
 	void			OnDoVScroll(UINT nSBCode, UINT nPos, CScrollBar* pScrollBar, CBaseView * master);
 
+	void			ShowDiffLines(int nLine);
+	
 	int				GetTabSize() const {return m_nTabSize;}
 
 	int				GetLineActualLength(int index) const;
